<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/plant_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="16dp"
        android:visibility="gone">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/linear_plant_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:background="@drawable/plant_view"
                    android:paddingBottom="10dp">

                    <!--Name-->
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/plant_name_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-32dp"
                        android:background="@drawable/plant_sub_view"
                        android:padding="10dp"
                        app:layout_constraintTop_toBottomOf="@+id/plant_image">

                        <TextView
                            android:id="@+id/plant_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="32dp"
                            android:layout_marginEnd="16dp"
                            android:fontFamily="@font/google_sans_bold"
                            android:gravity="center"
                            android:text="@string/app_name"
                            android:textColor="@color/green_lv_3"
                            android:textSize="24dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <!--Image-->
                    <com.makeramen.roundedimageview.RoundedImageView
                        android:id="@+id/plant_image"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/p4"
                        app:layout_constraintDimensionRatio="H,1:1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:riv_corner_radius="32dp" />

                    <!--Category-->
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/category_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@drawable/filter_sub_view"
                        android:padding="16dp"
                        app:layout_constraintTop_toBottomOf="@+id/plant_name_view">

                        <TextView
                            android:id="@+id/category"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/google_sans_bold"
                            android:text="@string/plant_view_category"
                            android:textColor="@color/green_lv_3"
                            android:textSize="24dp"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/text_category"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:fontFamily="@font/google_sans_medium"
                            android:text=". . ."
                            android:textColor="@color/green_lv_3"
                            android:textSize="20dp"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/category" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <!--Climate-->
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/climate_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@drawable/filter_sub_view"
                        android:padding="16dp"
                        app:layout_constraintTop_toBottomOf="@+id/category_text_view"
                        tools:layout_editor_absoluteX="10dp">

                        <TextView
                            android:id="@+id/climate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/google_sans_bold"
                            android:text="@string/plant_view_climate"
                            android:textColor="@color/green_lv_3"
                            android:textSize="24dp"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/text_climate"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:fontFamily="@font/google_sans_medium"
                            android:text=". . ."
                            android:textColor="@color/green_lv_3"
                            android:textSize="24dp"
                            app:layout_constraintLeft_toRightOf="@id/climate"
                            app:layout_constraintRight_toLeftOf="@id/plant_climate_info"
                            app:layout_constraintTop_toTopOf="parent" />

                        <Button
                            android:id="@+id/plant_climate_info"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:background="@drawable/outline_info_24"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />


                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <!--Luminosity-->
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/luminosity_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@drawable/filter_sub_view"
                        android:padding="16dp"
                        app:layout_constraintTop_toBottomOf="@+id/climate_text_view">

                        <TextView
                            android:id="@+id/luminosity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/google_sans_bold"
                            android:text="@string/plant_view_luminosity"
                            android:textColor="@color/green_lv_3"
                            android:textSize="24dp"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/text_luminosity"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:fontFamily="@font/google_sans_bold"
                            android:text=". . ."
                            android:textColor="@color/green_lv_3"
                            android:textSize="24dp"
                            app:layout_constraintLeft_toRightOf="@+id/luminosity"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <!--Bloom-->
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/bloom_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@drawable/filter_sub_view"
                        android:padding="16dp"
                        app:layout_constraintTop_toBottomOf="@+id/luminosity_text_view"
                        tools:layout_editor_absoluteX="10dp">

                        <TextView
                            android:id="@+id/bloom"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/google_sans_bold"
                            android:text="@string/plant_view_bloom"
                            android:textColor="@color/green_lv_3"
                            android:textSize="24dp"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/text_bloom"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:fontFamily="@font/google_sans_medium"
                            android:text=". . ."
                            android:textColor="@color/green_lv_3"
                            android:textSize="24dp"
                            app:layout_constraintLeft_toRightOf="@+id/bloom"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>
        </ScrollView>

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/stroke_1"
            android:layout_marginTop="-53dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/stroke_3"
            android:layout_marginTop="-53dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>